[gd_scene load_steps=8 format=3 uid="uid://e8uqasbkb03m"]

[ext_resource type="Script" path="res://Objects/Player/Skill/Bow/bow.gd" id="1_a434k"]
[ext_resource type="Texture2D" uid="uid://bnxsg2pjf01w2" path="res://Objects/Player/Skill/Bow/bow0.png" id="1_y84qx"]
[ext_resource type="Texture2D" uid="uid://c2yqpl40ckjjk" path="res://Objects/Player/Skill/Bow/bow1.png" id="2_50a8d"]
[ext_resource type="Texture2D" uid="uid://cv44dodxuia1g" path="res://Objects/Player/Skill/Bow/bow2.png" id="3_5sa40"]
[ext_resource type="Texture2D" uid="uid://c6gwvon2w1cwj" path="res://Objects/Player/Skill/Bow/bow3.png" id="4_nh83o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ol80l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_y84qx")
}, {
"duration": 1.0,
"texture": ExtResource("2_50a8d")
}, {
"duration": 1.0,
"texture": ExtResource("3_5sa40")
}, {
"duration": 1.0,
"texture": ExtResource("4_nh83o")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_y84qx")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2xbrw"]
radius = 134.004

[node name="Bow" type="Node2D" node_paths=PackedStringArray("anima", "anima_", "attack_timer")]
script = ExtResource("1_a434k")
anima = NodePath("anima")
anima_ = NodePath("anima/AnimatedSprite2D")
attack_timer = NodePath("Attack Timer")

[node name="anima" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="anima"]
position = Vector2(-8, -8.2)
sprite_frames = SubResource("SpriteFrames_ol80l")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="Attack_Range" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource("CircleShape2D_2xbrw")

[node name="Attack Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Attack_Range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack_Range" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Attack Timer" to="." method="_on_attack_timer_timeout"]
